# gorq-ml

./: .gitignore  .pylintrc  pyproject.toml
gorq_ml/: lr_scheduler.py  training.py  utils.py
gorq_ml/data/: __init__.py  _base.py
gorq_ml/models/vae/: __init__.py  _base.py  convvae.py  simple.py
gorq_ml/training/: __init__.py  _training.py  utils.py
gorq_ml/tuning/: successive_halving.py  utils.py
projects/cycle-consistency/: train.py
projects/cycle-consistency/configs/: moving-mnist.yml
projects/cycle-consistency/src/data/: data_module.py  moving_mnist.py
projects/cycle-consistency/src/models/: CycleHJSuperSloMo.py  HJSuperSloMo.py  cycle_consistency_pl.py  discriminator.py  utils.py
projects/facegen/: train.py
projects/facegen/experiments/: 01-base.yml  01-options.yml
projects/facegen/src/: data.py  losses.py
projects/facegen/src/models/: conv_vae.py  simple_vae.py
projects/vae/: prepare.ipynb  requirements.txt  train.py
projects/vae/experiments/celeba-faces/: 01-base.yml  01-combinations.yml
projects/vae/experiments/fashnion-mnist/: 01-base.yml  01-combinations.yml
projects/vae/src/: model.py
projects/vae/src/data/: __init__.py  celeba_faces.py  mnist.py
projects/vaesd/: play.ipynb  requirements.txt  train.py  train_latent_diffusion.py  train_vqvae.py
projects/vaesd/configs/: latent-diffusion.yml  vae.yml  weathergen-vqvae.yml
projects/vaesd/src/data/: __init__.py  celeba_faces.py  data_module.py  weathergen.py
projects/vaesd/src/models/: blocks.py  lpips.py  unet_base.py  unet_cond_base.py  vae.py  vqvae.py
projects/vaesd/src/pl/: latent_diffusion.py  vae.py
projects/weathergen/: train.py
projects/weathergen/experiments/: 01-base.yml  01-options.yml
projects/weathergen/src/: data.py  losses.py
(+5 files in other folders)
